--- a/Experiments/parkers_experiments/LoginTestAndroid/build.gradle
+++ b/Experiments/parkers_experiments/LoginTestAndroid/build.gradle
@@ -15,6 +15,11 @@ buildscript {
 }
 
 allprojects {
+    allprojects {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
     repositories {
         google()
         jcenter()
