--- a/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/AndroidManifest.xml
+++ b/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
