Pushing semi-working code for parker to look at

--- a/Backend/CatchTheCacheServer/src/main/resources/application.properties
+++ b/Backend/CatchTheCacheServer/src/main/resources/application.properties
@@ -19,7 +19,20 @@ server.port=8080
 # This tells jdbc to create the tables if they do not already exist
 # Defaults to none, in which case you must make the tables to match the Entity owners
 # Run the 'src/main/resources/db/mysql/data.sql' script in MySQL workbench or CLI to insert dummy data
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
+
+#
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+#
+# Naming strategy
+#
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 
 
 logging.file=application.log
@@ -33,10 +46,10 @@ logging.level.org.springframework=INFO
 #spring.messages.basename=messages/messages
 
 # Actuator / Management
-#management.endpoints.web.base-path=/manage
+management.endpoints.web.base-path=/manage
 
 # Spring Boot 1.5 makes actuator secure by default
-#management.endpoints.web.enabled=true
+management.endpoints.web.enabled=true
 
 # Active Spring profiles
 #spring.profiles.active=production
