--- a/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CacheListActivity"
+            android:label="@string/app_name">
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -27,12 +30,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ForgotPasswordActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
-        </activity>
+        android:name=".ForgotPasswordActivity"
+        android:label="@string/app_name">
+    </activity>
+
     </application>
 
 </manifest>
