--- a/Backend/CatchTheCacheServer/src/main/resources/application.properties
+++ b/Backend/CatchTheCacheServer/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 # Specify the url to your mysql server:
 # Hostname can be localhost or your teams remote server (e.g. proj309-mg-01.misc.iastate.edu)
 # Port should be 3306
-# Keep the parameters after the '?' to avoid a jdbc warning
-# Text after last '/' is the database. This should be created in your mysql server
-# In this particular case, create 'petclinic' database by running the command 'CREATE DATABASE petclinic' in your mysql server.
+# user for mysql server
 spring.datasource.url=jdbc:mysql://localhost:3306/catchthecache?verifyServerCertificate=false&useSSL=false&requireSSL=false
 
 # user for mysql server
 spring.datasource.username=root
 
 # password to mysql server
-spring.datasource.password=
+#	Local testing
+#spring.datasource.password=
+#	Remote Server
+spring.datasource.password=Catch The Pa55
+
 
 # this is the port your web server will run on
 server.port=8080
@@ -20,7 +22,7 @@ server.port=8080
 # Defaults to none, in which case you must make the tables to match the Entity owners
 # Run the 'src/main/resources/db/mysql/data.sql' script in MySQL workbench or CLI to insert dummy data
 # spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=
 #
 # Show or not log for each sql query
 spring.jpa.show-sql = true
