adding individual chat activity framework

--- a/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".individual_chat"
+            android:label="@string/title_activity_individual_chat"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
