--- a/Backend/ChatServer/chat/src/main/resources/application.properties
+++ b/Backend/ChatServer/chat/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Hostname can be localhost or your teams remote server (e.g. proj309-mg-01.misc.iastate.edu)
 # Port should be 3306
 # user for mysql server
-spring.datasource.url=jdbc:mysql://localhost:3306/catchthecache?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 
 # user for mysql server
 spring.datasource.username=root
@@ -11,7 +11,7 @@ spring.datasource.username=root
 #	Local testing
 #spring.datasource.password=
 #	Remote Server
-spring.datasource.password=Catch The Pa55
+spring.datasource.password=
 
 
 # this is the port your web server will run on
@@ -22,12 +22,13 @@ server.port=8080
 # Defaults to none, in which case you must make the tables to match the Entity owners
 # Run the 'src/main/resources/db/mysql/data.sql' script in MySQL workbench or CLI to insert dummy data
 # spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=create
 #
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 #
 # Naming strategy
+
 #
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #
@@ -48,10 +49,10 @@ logging.level.org.springframework=INFO
 #spring.messages.basename=messages/messages
 
 # Actuator / Management
-management.endpoints.web.base-path=/manage
+#management.endpoints.web.base-path=/manage
 
 # Spring Boot 1.5 makes actuator secure by default
-management.endpoints.web.enabled=true
+#management.endpoints.web.enabled=true
 
 # Active Spring profiles
 #spring.profiles.active=production
