--- a/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
@@ -30,9 +30,13 @@
             </intent-filter>
         </activity>
         <activity
-        android:name=".ForgotPasswordActivity"
+        android:name=".ForgotPasswordActivity_Username"
         android:label="@string/app_name">
     </activity>
+        <activity
+            android:name=".ForgotPasswordActivity_Answer"
+            android:label="@string/app_name">
+        </activity>
 
     </application>
 
