--- a/Frontend/CatchTheCacheAndroid/app/build.gradle
+++ b/Frontend/CatchTheCacheAndroid/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.lifeofcoding:cacheutilslibrary:1.1.0@aar'
     implementation 'com.google.code.gson:gson:2.2.2'
     implementation 'commons-io:commons-io:2.4'
+    implementation 'com.firebase:firebase-client-android:2.5.2+'
+    implementation 'com.android.volley:volley:1.1.0'
 }
