--- a/Backend/CatchTheCacheServer/src/main/resources/application.properties
+++ b/Backend/CatchTheCacheServer/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.datasource.username=root
 
 # password to mysql server
 #	Local testing
-spring.datasource.password=
+#spring.datasource.password=
 #	Remote Server
-#spring.datasource.password=Catch The Pa55
+spring.datasource.password=Catch The Pa55
 
 
 # this is the port your web server will run on
@@ -22,7 +22,7 @@ server.port=8080
 # Defaults to none, in which case you must make the tables to match the Entity owners
 # Run the 'src/main/resources/db/mysql/data.sql' script in MySQL workbench or CLI to insert dummy data
 # spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=
 #
 # Show or not log for each sql query
 spring.jpa.show-sql = true
