--- a/Backend/CatchTheCacheServer/src/main/resources/application.properties
+++ b/Backend/CatchTheCacheServer/src/main/resources/application.properties
@@ -8,10 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/catchthecache?verifyServerCert
 spring.datasource.username=root
 
 # password to mysql server
-#	Local testing
-spring.datasource.password=
-#	Remote Server
-#spring.datasource.password=Catch The Pa55
+spring.datasource.password=Catch The Pa55
 
 
 # this is the port your web server will run on
