--- a/Frontend/CatchTheCacheAndroid/app/build.gradle
+++ b/Frontend/CatchTheCacheAndroid/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'commons-io:commons-io:2.4'
     implementation 'com.firebase:firebase-client-android:2.5.2+'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.scaledrone:scaledrone-java:0.6.0'
 }
