--- a/Backend/CatchTheCacheServer/pom.xml
+++ b/Backend/CatchTheCacheServer/pom.xml
@@ -55,6 +55,26 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-messaging</artifactId>
+		</dependency>
+		<dependency>
+	    	<groupId>com.fasterxml.jackson.core</groupId>
+	    	<artifactId>jackson-core</artifactId>
+	    	<version>2.9.8</version>
+		</dependency>
+ 
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId> 
+		    <version>2.9.8</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
