--- a/Frontend/CatchTheCacheAndroid/app/build.gradle
+++ b/Frontend/CatchTheCacheAndroid/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     implementation "org.java-websocket:Java-WebSocket:1.4.0"
     implementation 'com.google.android.gms:play-services-base:16.1.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation "org.mockito:mockito-core:2.+"
 }
