--- a/Backend/CatchTheCacheServer/pom.xml
+++ b/Backend/CatchTheCacheServer/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<version>6.0.3</version>
 		</dependency>
 
 		<dependency>
