--- a/Backend/CatchTheCacheServer/src/main/resources/application.properties
+++ b/Backend/CatchTheCacheServer/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Hostname can be localhost or your teams remote server (e.g. proj309-mg-01.misc.iastate.edu)
 # Port should be 3306
 # user for mysql server
-spring.datasource.url=jdbc:mysql://localhost:3306/catchthecache?verifyServerCertificate=false&useSSL=false&requireSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CDT
+spring.datasource.url=jdbc:mysql://localhost:3306/catchthecache?verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
 
 # user for mysql server
 spring.datasource.username=root
