--- a/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/AndroidManifest.xml
@@ -84,8 +84,15 @@
         <activity
             android:name=".ForgotPasswordActivity_Answer"
             android:label="@string/app_name" />
-        <activity android:name=".NewSmsActivity" />
-        <activity android:name=".Chat" />
+        <activity
+            android:name=".ChatListActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ChatIndividualActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ChatNewActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
